blockquote overflow bug fix

--- a/static/css/partial/_post--detail.sass
+++ b/static/css/partial/_post--detail.sass
@@ -131,6 +131,7 @@
       padding: .5em 1.5em
       font-size: .9em
       border-left: 4px solid var(--key-color--default)
+      overflow: auto
 
       a
         color: #2196f3
